--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "api-carbon-monitor"
 version = "0.1.0"
-description = "API consumption manager that also tracks your carbon, electricity, and water usage oPI dependencies"
+description = "API consumption manager that also tracks your carbon, electricity, and water usage from API dependencies"
 authors = ["Dillon O'Leary <doleary@wisc.edu>"]
 readme = "README.md"
 
